tests/invalid/undef_type_mod_qual.m
%---------------------------------------------------------------------------%
% vim: ts=4 sw=4 et ft=mercury
%---------------------------------------------------------------------------%

:- module undef_type_mod_qual.

:- interface.

:- pred blah(undef_type_mod_qual.undefined_type) is det.

:- implementation.

blah(_).
