tests/invalid/undef_type_mod_qual.err_exp
undef_type_mod_qual.m:005: In definition of predicate `undef_type_mod_qual.blah'/1:
undef_type_mod_qual.m:005:   error: undefined type `undef_type_mod_qual.undefined_type'/0.
For more information, try recompiling with `-E'.
